Allfiles/Chapter5/paasGCPexample/paasDockerApp/hello-app/manifests/helloweb-ingress-static-ip.yaml

#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START container_helloapp_ingress]
# [START gke_manifests_helloweb_ingress_static_ip_ingress_helloweb]
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
  labels:
    app: hello
spec:
  defaultBackend:
    service:
      name: helloweb-backend
      port:
        number: 8080
# [END gke_manifests_helloweb_ingress_static_ip_ingress_helloweb]
---
# [START gke_manifests_helloweb_ingress_static_ip_service_helloweb_backend]
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
# [END gke_manifests_helloweb_ingress_static_ip_service_helloweb_backend]
# [END container_helloapp_ingress]
---
